Form Input: add box-sizing: border-box; to stop input overflowing the container div

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -314,6 +314,7 @@ form {
 label,
 input {
     display: block;
+    box-sizing: border-box;
     width: 100%;
 }
 
